...
    @ObservedObject var viewModel: HomeViewModel

    var body: some View {
        IntroView(
            title: "Accetta un bonus ID Pay",
            subtitle: "Inserisci i dettagli del pagamento e permetti ai tuoi clienti di utilizzare un bonus ID Pay.",
            actionTitle: "Accetta bonus ID Pay") {
                router.pushTo(.initiatives(viewModel: InitiativesViewModel(networkClient: viewModel.networkClient)))
            }
    }
}

#Preview {
...
