...
                .submitLabel(.next)
                .onSubmit {
                    focusedField = .password
                }
                .disabled(isLoading)
                .id(Field.username)
                .accessibilityIdentifier("Username textfield")
            
            InputField(type: .password, text: $viewModel.password, placeholder: "Password", autofocus: false)
                .focused($focusedField, equals: .password)
                .submitLabel(.done)
                .disabled(isLoading)
                .onSubmit {
...
